--- a/client/html/index.html
+++ b/client/html/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="wrapper">
+
+    </div>
 
     <script src="bundle.js"></script>
   </body>
