add repos section

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="wrapper">
-
+      <section class="repos"></section>
     </div>
 
     <script src="bundle.js"></script>
