--- a/client/html/index.html
+++ b/client/html/index.html
@@ -11,6 +11,13 @@
   </head>
   <body>
     <div class="wrapper">
+      <header class="header">
+        <h1 class="header-logo">Michael Cavalea</h1>
+        <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
+        <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy building lightweight, functional interfaces, and open source software.</p>
+        <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
+      </header>
+
       <section class="repos"></section>
     </div>
 
