--- a/client/html/index.html
+++ b/client/html/index.html
@@ -18,6 +18,8 @@
         <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
       </header>
 
+      <hr class="rule">
+
       <section class="repos"></section>
     </div>
 
