--- a/client/html/index.html
+++ b/client/html/index.html
@@ -20,19 +20,21 @@
 
       <hr class="rule">
 
-      <section class="about section">
+      <section class="section">
         <p class="section-heading">About</p>
 
-        <div class="about-piece" data-about>
-          <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way. I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</p>
-        </div>
+        <div class="about">
+          <div class="about-piece" data-about>
+            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way. I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</p>
+          </div>
 
-        <div class="about-piece" data-about>
-          <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</p>
-        </div>
+          <div class="about-piece" data-about>
+            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</p>
+          </div>
 
-        <div class="about-piece" data-about>
-          <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</p>
+          <div class="about-piece" data-about>
+            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</p>
+          </div>
         </div>
       </section><!-- END section -->
 
