start repos section

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -46,7 +46,15 @@
         </div>
       </section><!-- END section -->
 
-      <section class="repos"></section>
+      <hr class="rule">
+
+      <section class="section">
+        <div class="section-meta">
+          <p class="section-heading">Code</p>
+        </div>
+
+        <div class="repos"></div>
+      </section><!-- END section -->
     </div>
 
     <script src="bundle.js"></script>
