--- a/client/html/index.html
+++ b/client/html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="wrapper">
+    <div class="wrapper container">
       <header class="header">
         <h1 class="header-logo">Michael Cavalea</h1>
         <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
@@ -55,7 +55,17 @@
 
         <div class="repos"></div>
       </section><!-- END section -->
-    </div>
+    </div><!-- END wrapper -->
+
+    <footer class="footer">
+      <div class="container">
+        <img class="footer-logo" src="images/footer/logo.svg">
+        <p class="footer-heading">Life&apos;s a beach. Wear shorts.</p>
+        <a class="footer-cta" href="#">Goin&apos; <img class="footer-cta-icon" src="images/footer/cta.svg"></a>
+      </div>
+    </footer><!-- END footer -->
+
+    <img class="badge" src="images/badge.svg"><!-- END badge -->
 
     <script src="bundle.js"></script>
   </body>
