--- a/client/html/index.html
+++ b/client/html/index.html
@@ -13,9 +13,12 @@
     <div class="wrapper container">
       <header class="header">
         <h1 class="header-logo">Michael Cavalea</h1>
-        <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
-        <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy building lightweight, functional interfaces, and open source software.</p>
-        <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
+
+        <div class="header-content">
+          <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
+          <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy building lightweight, functional interfaces, and open source software.</p>
+          <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
+        </div>
       </header>
 
       <hr class="rule">
