start contact section

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -58,6 +58,20 @@
 
         <div class="repos"></div>
       </section><!-- END section -->
+
+      <hr class="rule">
+
+      <section class="section">
+        <div class="section-meta">
+          <p class="section-heading">Contact</p>
+        </div>
+
+        <div class="contact">
+          <a class="contact-link" href="https://github.com/callmecavs" target="_blank">@include("images/contact/github.svg")GitHub</a>
+          <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")Twitter</a>
+          <!-- <a class="contact-link" href="" target="_blank">@include("images/contact/email.svg")Email</a> -->
+        </div>
+      </section><!-- END section -->
     </div><!-- END wrapper -->
 
     <footer class="footer">
