add header and rule tablet

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -12,14 +12,22 @@
   <body>
     <div class="wrapper container">
       <header class="header">
-        <h1 class="header-logo">Michael Cavalea</h1>
+        <div class="header-topbar">
+          <h1 class="header-logo">Michael Cavalea</h1>
+
+          <nav class="header-nav">
+            <a class="header-nav-link" href="#">About</a>
+            <a class="header-nav-link" href="#">Code</a>
+            <a class="header-nav-link" href="#">Contact</a>
+          </nav>
+        </div>
 
         <div class="header-content">
           <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
           <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy building lightweight, functional interfaces, and open source software.</p>
           <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
         </div>
-      </header>
+      </header><!-- END header -->
 
       <hr class="rule">
 
