cleanup section controls

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -36,9 +36,9 @@
           <p class="section-heading">About</p>
 
           <div class="section-control">
-            <img class="section-minus" src="images/section/minus.svg" data-about-minus>
+            <a class="section-minus" href="#" data-about-minus></a>
             <img class="section-eye" src="images/section/eye.svg">
-            <img class="section-plus" src="images/section/plus.svg" data-about-plus>
+            <a class="section-plus" href="#" data-about-plus></a>
           </div>
         </div>
 
