--- a/client/html/index.html
+++ b/client/html/index.html
@@ -83,7 +83,7 @@
     </div><!-- END wrapper -->
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
         <img class="footer-logo" src="images/footer/logo.svg">
         <p class="footer-heading">Life&apos;s a beach. Wear shorts.</p>
         <a class="footer-cta" href="#">Goin&apos; <img class="footer-cta-icon" src="images/footer/cta.svg"></a>
