start about JS refactor

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="about" data-about>
-          <div class="about-piece" data-about-piece>
+          <div class="about-piece is-active" data-about-piece>
             <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</p>
           </div>
 
