add email contact link

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -77,7 +77,7 @@
         <div class="contact">
           <a class="contact-link" href="https://github.com/callmecavs" target="_blank">@include("images/contact/github.svg")GitHub</a>
           <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")Twitter</a>
-          <!-- <a class="contact-link" href="" target="_blank">@include("images/contact/email.svg")Email</a> -->
+          <a class="contact-link" href="mailto:callmecavs@gmail.com" target="_blank">@include("images/contact/email.svg")Email</a>
         </div>
       </section><!-- END section -->
     </div><!-- END wrapper -->
