refactor about markup/style

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -31,31 +31,21 @@
 
       <hr class="rule">
 
-      <section class="section">
-        <div class="section-meta">
-          <p class="section-heading">About</p>
+      <section class="about">
+        <div class="about-topbar">
+          <p class="about-heading section-heading">About</p>
 
-          <div class="section-control">
-            <a class="section-minus" href="#" data-about-toggle data-about-minus></a>
-            <img class="section-eye" src="images/section/eye.svg">
-            <a class="section-plus" href="#" data-about-toggle data-about-plus></a>
-          </div>
-        </div>
+          <a class="about-button about-button-prev" href="#"></a>
+          <img class="about-icon" src="images/about/icon.svg">
+          <a class="about-button about-button-next" href="#"></a>
+        </div><!-- END about-topbar -->
 
-        <div class="about" data-about>
-          <div class="about-piece is-active" data-about-piece>
-            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</p>
-          </div>
-
-          <div class="about-piece" data-about-piece>
-            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</p>
-          </div>
-
-          <div class="about-piece" data-about-piece>
-            <p class="about-text">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs. I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way. I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</p>
-          </div>
-        </div>
-      </section><!-- END section -->
+        <div class="about-content">
+          <span class="about-piece about-piece-text is-active">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</span>
+          <span class="about-piece about-piece-text">I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</span>
+          <span class="about-piece about-piece-text">I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</span>
+        </div><!-- END about-content -->
+      </section><!-- END about -->
 
       <hr class="rule">
 
