refactor content markup/styles

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -59,17 +59,13 @@
 
       <hr class="rule">
 
-      <section class="section">
-        <div class="section-meta">
-          <p class="section-heading">Contact</p>
-        </div>
+      <section class="contact">
+        <p class="contact-heading section-heading">Contact</p>
 
-        <div class="contact">
-          <a class="contact-link" href="https://github.com/callmecavs" target="_blank">@include("images/contact/github.svg")GitHub</a>
-          <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")Twitter</a>
-          <a class="contact-link" href="mailto:callmecavs@gmail.com">@include("images/contact/email.svg")Email</a>
-        </div>
-      </section><!-- END section -->
+        <a class="contact-link" href="mailto:callmecavs@gmail.com">@include("images/contact/email.svg")<span class="contact-link-text">Email</span></a>
+        <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")<span class="contact-link-text">Twitter</span></a>
+        <a class="contact-link" href="https://github.com/callmecavs" target="_blank">@include("images/contact/github.svg")<span class="contact-link-text">GitHub</span></a>
+      </section><!-- END contact -->
     </div><!-- END wrapper -->
 
     <footer class="footer">
