start code section refactor

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -49,13 +49,11 @@
 
       <hr class="rule">
 
-      <section class="section">
-        <div class="section-meta">
-          <p class="section-heading">Code</p>
-        </div>
+      <section class="code">
+        <p class="code-heading section-heading">Code</p>
 
-        <div class="repos"></div>
-      </section><!-- END section -->
+        <div class="code-repos"></div>
+      </section><!-- END code -->
 
       <hr class="rule">
 
