more code section refactoring

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -51,6 +51,7 @@
 
       <section class="code">
         <p class="code-heading section-heading">Code</p>
+        <p class="code-quote">&ldquo;Fear is the lack of faith in one&apos;s ability to create powerful solutions.&rdquo; - T.F. Hodge</p>
 
         <div class="code-repos"></div>
       </section><!-- END code -->
