adjust code topbar for tablet/desktop

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -50,8 +50,10 @@
       <hr class="rule">
 
       <section class="code">
-        <p class="code-heading section-heading">Code</p>
-        <p class="code-quote">&ldquo;Fear is the lack of faith in one&apos;s ability to create powerful solutions.&rdquo; <span class="code-quote-author">&mdash; T.F. Hodge</span></p>
+        <div class="code-topbar">
+          <p class="code-heading section-heading">Code</p>
+          <p class="code-quote">&ldquo;Fear is the lack of faith in one&apos;s ability to create powerful solutions.&rdquo; <span class="code-quote-author">&mdash; T.F. Hodge</span></p>
+        </div>
 
         <div class="code-repos"></div>
       </section><!-- END code -->
