add data attributes to about markup

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -35,15 +35,15 @@
         <div class="about-topbar">
           <p class="about-heading section-heading">About</p>
 
-          <a class="about-button about-button-prev" href="#"></a>
+          <a class="about-button about-button-prev" href="#" data-about-button data-about-prev></a>
           <img class="about-icon" src="images/about/icon.svg">
-          <a class="about-button about-button-next" href="#"></a>
+          <a class="about-button about-button-next" href="#" data-about-button data-about-next></a>
         </div><!-- END about-topbar -->
 
-        <div class="about-content">
-          <span class="about-piece about-piece-text is-active">Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</span>
-          <span class="about-piece about-piece-text">I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</span>
-          <span class="about-piece about-piece-text">I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</span>
+        <div class="about-content" data-about-content>
+          <span class="about-piece about-piece-text is-active" data-about-piece>Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</span>
+          <span class="about-piece about-piece-text" data-about-piece>I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</span>
+          <span class="about-piece about-piece-text" data-about-piece>I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</span>
         </div><!-- END about-content -->
       </section><!-- END about -->
 
