change section names

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -17,8 +17,8 @@
 
           <nav class="header-nav">
             <a class="header-nav-link" href="#">About</a>
-            <a class="header-nav-link" href="#">Code</a>
-            <a class="header-nav-link" href="#">Contact</a>
+            <a class="header-nav-link" href="#">Open Source</a>
+            <a class="header-nav-link" href="#">Elsewhere</a>
           </nav>
         </div>
 
@@ -50,7 +50,7 @@
       <hr class="rule">
 
       <section class="code">
-        <p class="code-heading section-heading">Code</p>
+        <p class="code-heading section-heading">Open Source</p>
 
         <div class="code-repos"></div>
       </section><!-- END code -->
@@ -58,7 +58,7 @@
       <hr class="rule">
 
       <section class="contact">
-        <p class="contact-heading section-heading">Contact</p>
+        <p class="contact-heading section-heading">Elsewhere</p>
 
         <a class="contact-link" href="mailto:callmecavs@gmail.com">@include("images/contact/email.svg")<span class="contact-link-text">Email</span></a>
         <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")<span class="contact-link-text">Twitter</span></a>
