add jump attributes to markup

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -16,9 +16,9 @@
           <h1 class="header-logo">Michael Cavalea</h1>
 
           <nav class="header-nav">
-            <a class="header-nav-link" href="#">About</a>
-            <a class="header-nav-link" href="#">Open Source</a>
-            <a class="header-nav-link" href="#">Elsewhere</a>
+            <a class="header-nav-link" href="#" data-jump=".about">About</a>
+            <a class="header-nav-link" href="#" data-jump=".code">Open Source</a>
+            <a class="header-nav-link" href="#" data-jump=".contact">Elsewhere</a>
           </nav>
         </div>
 
@@ -70,7 +70,7 @@
       <div class="footer-container container">
         <img class="footer-logo" src="images/footer/logo.svg">
         <p class="footer-heading">Life&apos;s a beach. Wear shorts.</p>
-        <a class="footer-cta" href="#">Goin&apos; <img class="footer-cta-icon" src="images/footer/cta.svg"></a>
+        <a class="footer-cta" href="#" data-jump=".header">Goin&apos; <img class="footer-cta-icon" src="images/footer/cta.svg"></a>
       </div>
     </footer><!-- END footer -->
 
