add jump link functionality

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -16,9 +16,9 @@
           <h1 class="header-logo">Michael Cavalea</h1>
 
           <nav class="header-nav">
-            <a class="header-nav-link" href="#" data-jump=".about">About</a>
-            <a class="header-nav-link" href="#" data-jump=".code">Open Source</a>
-            <a class="header-nav-link" href="#" data-jump=".contact">Elsewhere</a>
+            <a class="header-nav-link" href="#" data-jump="1">About</a>
+            <a class="header-nav-link" href="#" data-jump="2">Open Source</a>
+            <a class="header-nav-link" href="#" data-jump="3">Elsewhere</a>
           </nav>
         </div>
 
@@ -29,7 +29,7 @@
         </div>
       </header><!-- END header -->
 
-      <hr class="rule">
+      <hr class="rule" data-rule>
 
       <section class="about">
         <div class="about-topbar">
@@ -47,7 +47,7 @@
         </div><!-- END about-content -->
       </section><!-- END about -->
 
-      <hr class="rule">
+      <hr class="rule" data-rule>
 
       <section class="code">
         <p class="code-heading section-heading">Open Source</p>
@@ -55,7 +55,7 @@
         <div class="code-repos"></div>
       </section><!-- END code -->
 
-      <hr class="rule">
+      <hr class="rule" data-rule>
 
       <section class="contact">
         <p class="contact-heading section-heading">Elsewhere</p>
