--- a/client/html/index.html
+++ b/client/html/index.html
@@ -45,7 +45,7 @@
           <span class="about-piece about-text" data-about-piece data-inline>I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</span>
           <span class="about-piece about-text" data-about-piece data-inline>I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</span>
 
-          <div class="about-piece about-wrap" data-about-piece data-block>
+          <div class="about-piece about-wrap" data-about-piece data-flex>
             <div class="about-age">
               <div class="about-age-meta">
                 <p class="about-age-meta-heading">Modern<br>Cavs</p>
@@ -58,7 +58,7 @@
             <div class="about-age">
               <div class="about-age-meta">
                 <p class="about-age-meta-heading">Throwback<br>Cavs</p>
-                <p class="about-age-meta-text">Now</p>
+                <p class="about-age-meta-text">Circa &apos;95</p>
               </div>
 
               <img class="about-age-image" src="images/about/throwback.png">
