--- a/client/html/index.html
+++ b/client/html/index.html
@@ -23,8 +23,8 @@
         </div>
 
         <div class="header-content">
-          <p class="header-subheading">I&apos;m Mike, but call me Cavs.</p>
-          <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy building lightweight, functional interfaces, and open source software.</p>
+          <p class="header-subheading">Hello. I&apos;m Michael, but call me Cavs.</p>
+          <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy creating performant interfaces, and open source software.</p>
           <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
         </div>
       </header><!-- END header -->
@@ -41,9 +41,13 @@
         </div><!-- END about-topbar -->
 
         <div class="about-content" data-about-content>
-          <span class="about-piece about-text is-active" data-about-piece data-inline>Hello, I&apos;m Michael. But I&apos;d prefer if you called me Cavs.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I&apos;m a developer, and a simple man - simple enough for one name, and a couple trusty pairs of shorts. Creating, and creativity, have always been my passion. I believe in meaning over metrics, and love crafting experiences that leave an impact, that leave people feeling some kinda way.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I live for the late nights, for pressure making diamonds, for never compromising, for being fearless and confident in the face of ambition versus reality. I write simple code, backed by complex principles, that will get out of your way, and leave you fascinated by the experience.</span>
+          <span class="about-piece about-text is-active" data-about-piece data-inline>Creating is my passion. Code is my canvas.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I am more intrigued by how things work than how things look.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I believe in meaning over metrics.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I live for late nights, for pressure making diamonds, for never settling, for being confident in the face of ambition versus reality.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I write elegant code, backed by thorough understanding, that gets out of the way, and leaves you fascinated with the experience.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>Oh, and I always wear shorts.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>Yes, even in the winter.</span>
 
           <div class="about-piece about-wrap" data-about-piece data-flex>
             <div class="about-age">
