--- a/client/html/index.html
+++ b/client/html/index.html
@@ -42,10 +42,10 @@
 
         <div class="about-content" data-about-content>
           <span class="about-piece about-text is-active" data-about-piece data-inline>Creating is my passion. Code is my canvas.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I am more intrigued by how things work than how things look.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I am more intrigued by how things work than by how things look.</span>
           <span class="about-piece about-text" data-about-piece data-inline>I believe in meaning over metrics.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I live for late nights, for pressure making diamonds, for never settling, for being confident in the face of ambition versus reality.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I write elegant code, backed by thorough understanding, that gets out of the way, and leaves you fascinated with the experience.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I live for late nights, for pressure making diamonds, for never compromising.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>I write elegant code that gets out of your way, and leaves you fascinated with the experience.</span>
           <span class="about-piece about-text" data-about-piece data-inline>Oh, and I always wear shorts.</span>
           <span class="about-piece about-text" data-about-piece data-inline>Yes, even in the winter.</span>
 
