add mobile jump link

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -25,7 +25,7 @@
         <div class="header-content">
           <p class="header-subheading">Hello. I&apos;m Michael, but call me Cavs.</p>
           <p class="header-heading">I&apos;m a frontend developer with an unrivaled eye for detail. I enjoy creating performant interfaces, and open source software.</p>
-          <a class="header-cta" href="#">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
+          <a class="header-cta" href="#" data-jump="1">Shall we?<img class="header-cta-icon" src="images/header/cta.svg"></a>
         </div>
       </header><!-- END header -->
 
