--- a/client/html/index.html
+++ b/client/html/index.html
@@ -42,12 +42,9 @@
 
         <div class="about-content" data-about-content>
           <span class="about-piece about-text is-active" data-about-piece data-inline>Creating is my passion. Code is my canvas.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I am more intrigued by how things work than by how things look.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I believe in meaning over metrics.</span>
           <span class="about-piece about-text" data-about-piece data-inline>I live for late nights, for pressure making diamonds, for never compromising.</span>
           <span class="about-piece about-text" data-about-piece data-inline>I write elegant code that gets out of your way, and leaves you fascinated with the experience.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>Oh, and I always wear shorts.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>Yes, even in the winter.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>And I always wear shorts, even in the winter.</span>
 
           <div class="about-piece about-wrap" data-about-piece data-flex>
             <div class="about-age">
@@ -56,7 +53,7 @@
                 <p class="about-age-meta-text">Now</p>
               </div>
 
-              <img class="about-age-image" src="images/about/modern.png">
+              <div class="about-age-image about-age-image-modern"></div>
             </div>
 
             <div class="about-age">
@@ -65,7 +62,7 @@
                 <p class="about-age-meta-text">Circa &apos;95</p>
               </div>
 
-              <img class="about-age-image" src="images/about/throwback.png">
+              <div class="about-age-image about-age-image-throwback"></div>
             </div>
           </div><!-- END about-wrap -->
         </div><!-- END about-content -->
