--- a/client/html/index.html
+++ b/client/html/index.html
@@ -80,6 +80,7 @@
 
       <section class="contact">
         <p class="contact-heading section-heading">Elsewhere</p>
+        <p class="contact-subheading">I&apos;m always open to building interesting, challenging, and ambitious frontend experiences. Let&apos;s talk!</p>
 
         <a class="contact-link" href="mailto:callmecavs@gmail.com">@include("images/contact/email.svg")<span class="contact-link-text">Email</span></a>
         <a class="contact-link" href="https://twitter.com/callmecavs" target="_blank">@include("images/contact/twitter.svg")<span class="contact-link-text">Twitter</span></a>
