update about section content

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -41,10 +41,8 @@
         </div><!-- END about-topbar -->
 
         <div class="about-content" data-about-content>
-          <span class="about-piece about-text is-active" data-about-piece data-inline>Creating is my passion. Code is my canvas.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I live for late nights, for pressure making diamonds, for never compromising.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>I write elegant code that gets out of your way, and leaves you fascinated with the experience.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>And I always wear shorts, even in the winter.</span>
+          <span class="about-piece about-text is-active" data-about-piece data-inline>I&apos;m currently living in New York City, working at Ogilvy &amp; Mather as a Design Technologist. I graduated from The George Washington University with a degree in Computer Science.</span>
+          <span class="about-piece about-text" data-about-piece data-inline>Creating is my passion. Code is my canvas. I live for late nights, for pressure making diamonds, for never compromising. I write elegant code that gets out of your way, and leaves you fascinated with the experience. And I always wear shorts, even in the winter.</span>
 
           <div class="about-piece about-wrap" data-about-piece data-flex>
             <div class="about-age">
