cleanup about section HTML/CSS

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -32,34 +32,27 @@
       <hr class="rule" data-rule>
 
       <section class="about">
-        <div class="about-topbar">
-          <p class="about-heading section-heading">About</p>
-        </div><!-- END about-topbar -->
+        <p class="about-heading section-heading">About</p>
 
-        <div class="about-content" data-about-content>
-          <span class="about-piece about-text is-active" data-about-piece data-inline>I&apos;m currently living in New York City, working at Squarespace as a Software Engineer. I graduated from The George Washington University with a degree in Computer Science.</span>
-          <span class="about-piece about-text" data-about-piece data-inline>Creating is my passion. Code is my canvas. I live for late nights, for pressure making diamonds, for never compromising. I write elegant code that gets out of your way, and leaves you fascinated with the experience. And I always wear shorts, even in the winter.</span>
+        <p class="about-text">I&apos;m currently living in New York City, working at Squarespace as a Software Engineer. I graduated from The George Washington University with a degree in Computer Science. Creating is my passion. Code is my canvas. I live for late nights, for pressure making diamonds, for never compromising. I write elegant code that gets out of your way, and leaves you fascinated with the experience. And I always wear shorts, even in the winter.</span>
 
-          <div class="about-piece about-wrap" data-about-piece data-flex>
-            <div class="about-age">
-              <div class="about-age-meta">
-                <p class="about-age-meta-heading">Modern<br>Cavs</p>
-                <p class="about-age-meta-text">Now</p>
-              </div>
+        <div class="about-age">
+          <div class="about-age-meta">
+            <p class="about-age-meta-heading">Throwback<br>Cavs</p>
+            <p class="about-age-meta-text">Circa &apos;95</p>
+          </div>
 
-              <div class="about-age-image about-age-image-modern"></div>
-            </div>
+          <div class="about-age-image about-age-image-throwback"></div>
+        </div>
 
-            <div class="about-age">
-              <div class="about-age-meta">
-                <p class="about-age-meta-heading">Throwback<br>Cavs</p>
-                <p class="about-age-meta-text">Circa &apos;95</p>
-              </div>
+        <div class="about-age">
+          <div class="about-age-meta">
+            <p class="about-age-meta-heading">Modern<br>Cavs</p>
+            <p class="about-age-meta-text">Now</p>
+          </div>
 
-              <div class="about-age-image about-age-image-throwback"></div>
-            </div>
-          </div><!-- END about-wrap -->
-        </div><!-- END about-content -->
+          <div class="about-age-image about-age-image-modern"></div>
+        </div>
       </section><!-- END about -->
 
       <hr class="rule" data-rule>
