update about paragraph

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -34,7 +34,7 @@
       <section class="about">
         <p class="about-heading section-heading">About</p>
 
-        <p class="about-text">I&apos;m currently living in New York City, working at Squarespace as a Software Engineer. I graduated from The George Washington University with a degree in Computer Science. Creating is my passion. Code is my canvas. I live for late nights, for pressure making diamonds, for never compromising. I write elegant code that gets out of your way, and leaves you fascinated with the experience. And I always wear shorts, even in the winter.</span>
+        <p class="about-text">I&apos;m currently living in New York City, enjoying funemployment. I graduated from The George Washington University with a degree in Computer Science. Creating is my passion. Code is my canvas. I live for late nights, for pressure making diamonds, for never compromising. I write elegant code that gets out of your way, and leaves you fascinated with the experience. And I always wear shorts, even in the winter.</span>
 
         <div class="about-age">
           <div class="about-age-meta">
